# Graphs

./: .gitignore  LICENSE  README.md
proj-1/: CMakeLists.txt  README.md  main.cpp
proj-1/examples/: AdjacencyList.txt
proj-1/headers/: App.h  Edge.h  Graph.h  GraphReader.h  GraphWriter.h  RandomGraphGenerator.h  Vertice.h
proj-1/sources/: App.cpp  Edge.cpp  Graph.cpp  GraphReader.cpp  GraphWriter.cpp  RandomGraphGenerator.cpp  Vertice.cpp
proj-2/: README.md
proj-2/task_1/: AdjacencyList.cpp  AdjacencyList.h  AdjacencyMatrix.cpp  AdjacencyMatrix.h  Graph.cpp  Graph.h  GraphOptions.cpp  GraphOptions.h  IncidenceMatrix.cpp  README.md  drawgraph1.dot  drawgraph2.dot  main  main.cpp
proj-2/task_2/: AdjacencyList.cpp  AdjacencyList.txt  Graph.cpp  Graph.h  GraphOptions.h  GraphReader.cpp  GraphReader.h  IncidenceMatrix.cpp  Makefile  README.md  drawgraph1.dot  drawgraph2.dot  main  main.cpp
proj-2/task_3/: AdjacencyList.cpp  AdjacencyList.h  AdjacencyMatrix.cpp  AdjacencyMatrix.h  Graph.cpp  Graph.h  GraphOptions.cpp  GraphOptions.h  IncidenceMatrix.cpp  IncidenceMatrix.h  README.md  drawgraph1.dot  main  main.cpp  output.dot
proj-2/task_4/: AdjacencyList.h  AdjacencyMatrix.h  Graph.cpp  Graph.h  GraphOptions.cpp  README.md  (+6 more)
proj-3/: AdjacencyList.cpp  AdjacencyList.h  AdjacencyMatrix.cpp  AdjacencyMatrix.h  CMakeLists.txt  Graph.cpp  Graph.h  GraphRepresentation.h  IncidenceMatrix.cpp  IncidenceMatrix.h  UserInput.cpp  UserInput.h  main.cpp
proj-3/examples/: AdjacencyList.txt  IncidenceList.txt
proj-4/: README.md
proj-5/: Graph.h  g.dot  main.cpp  mat.dot
(+40 files in other folders)
